--- a/app/src/main/res/layout/layout_deal_item.xml
+++ b/app/src/main/res/layout/layout_deal_item.xml
@@ -4,6 +4,7 @@
                                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                                    android:layout_width="match_parent"
                                                    android:minHeight="@dimen/grid_cell_min_height"
+                                                   app:cardElevation="4dp"
                                                    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,6 +17,7 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_height="@dimen/image_height"
+                tools:src="@drawable/ic_placeholder"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintBottom_toTopOf="@+id/name"/>
@@ -23,9 +25,11 @@
         <TextView
                 android:id="@+id/name"
                 app:layout_constraintTop_toBottomOf="@+id/image"
-                style="@style/TextAppearance.MaterialComponents.Subtitle1"
+                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                 android:textStyle="bold"
                 android:paddingTop="@dimen/baseline_1x"
+                android:paddingLeft="@dimen/baseline_1x"
+                android:paddingRight="@dimen/baseline_1x"
                 android:layout_width="0dp"
                 android:gravity="center"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -43,7 +47,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/name"
                 tools:text="$44.56"
                 android:textStyle="italic"
-                style="@style/TextAppearance.MaterialComponents.Subtitle1"
+                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toTopOf="@+id/stores"/>
@@ -56,7 +60,7 @@
                 tools:text="Microsoft"
                 android:paddingTop="@dimen/baseline_1x"
                 android:paddingBottom="@dimen/baseline_1x"
-                style="@style/TextAppearance.MaterialComponents.Subtitle1"
+                style="@style/TextAppearance.MaterialComponents.Body2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"/>
