--- a/app/src/main/res/layout/layout_deal_item.xml
+++ b/app/src/main/res/layout/layout_deal_item.xml
@@ -57,9 +57,10 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/price"
-                tools:text="Microsoft"
-                android:paddingTop="@dimen/baseline_1x"
-                android:paddingBottom="@dimen/baseline_1x"
+                android:gravity="center"
+                android:textSize="14sp"
+                tools:text="Microsoft since 1 hour ago"
+                android:padding="@dimen/baseline_1x"
                 style="@style/TextAppearance.MaterialComponents.Body2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
