--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/nav_graph"
             app:startDestination="@id/dealsFragment">
 
@@ -8,5 +9,22 @@
             android:id="@+id/dealsFragment"
             android:name="de.r4md4c.gamedealz.deals.DealsFragment"
             android:label="fragment_deals"
-            />
+            >
+        <action
+                android:id="@+id/action_dealsFragment_to_searchFragment"
+                app:destination="@id/searchFragment"
+                app:enterAnim="@anim/nav_default_enter_anim"
+                app:exitAnim="@anim/nav_default_exit_anim"
+                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
+    </fragment>
+    <fragment
+            android:id="@+id/searchFragment"
+            android:name="de.r4md4c.gamedealz.search.SearchFragment"
+            android:label="fragment_search"
+            tools:layout="@layout/fragment_search">
+        <argument
+                android:name="search_term"
+                app:argType="string"/>
+    </fragment>
 </navigation>
