--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,14 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".search.SearchFragment">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="match_parent"
+                                                   tools:context=".search.SearchFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+            android:layout_height="match_parent"/>
 
-</FrameLayout>
+    <TextView
+            android:id="@+id/emptyResultsTitleText"
+            android:layout_width="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="@string/results_empty"
+            style="@style/TextAppearance.MaterialComponents.Subtitle1"
+            android:layout_height="wrap_content"/>
+
+    <ProgressBar
+            android:id="@+id/progress"
+            android:layout_gravity="center"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    <TextView
+            android:id="@+id/errorText"
+            android:layout_width="match_parent"
+            android:layout_gravity="center"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            style="@style/TextAppearance.Design.Error"
+            tools:text="An error has happened."
+            android:gravity="center"
+            android:layout_height="wrap_content"/>
+
+    <Button
+            android:id="@+id/retry"
+            android:layout_width="wrap_content"
+            style="@style/Widget.MaterialComponents.Button"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:text="@string/retry"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/errorText"
+            android:layout_height="wrap_content"/>
+
+    <androidx.constraintlayout.widget.Group
+            android:id="@+id/errorGroup"
+            android:visibility="gone"
+            app:constraint_referenced_ids="errorText,retry"
+            android:layout_width="0dp"
+            android:layout_height="0dp"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
