--- a/app/src/main/res/drawable/ic_placeholder.xml
+++ b/app/src/main/res/drawable/ic_placeholder.xml
@@ -1,7 +1,7 @@
-<vector android:height="256dp"
+<vector android:height="@dimen/image_height"
         android:viewportHeight="512"
         android:viewportWidth="512"
-        android:width="256dp"
+        android:width="@dimen/image_height"
         xmlns:android="http://schemas.android.com/apk/res/android">
     <path
             android:fillColor="@android:color/darker_gray"
