--- a/app/src/main/res/layout/layout_deal_item.xml
+++ b/app/src/main/res/layout/layout_deal_item.xml
@@ -9,7 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
         <ImageView
                 android:id="@+id/image"
@@ -18,7 +18,7 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_height="wrap_content"
-                android:maxHeight="@dimen/image_height"
+                android:maxHeight="104dp"
                 tools:src="@drawable/ic_placeholder"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toTopOf="@+id/name"/>
