--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,8 @@
     <fragment
             android:id="@+id/dealsFragment"
             android:name="de.r4md4c.gamedealz.deals.DealsFragment"
-            android:label="fragment_deals"
+            android:label="@string/title_on_going_deals"
+            tools:layout="@layout/fragment_deals"
             >
         <action
                 android:id="@+id/action_dealsFragment_to_searchFragment"
@@ -21,7 +22,6 @@
     <fragment
             android:id="@+id/searchFragment"
             android:name="de.r4md4c.gamedealz.search.SearchFragment"
-            android:label="fragment_search"
             tools:layout="@layout/fragment_search">
         <argument
                 android:name="search_term"
