--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,6 +18,9 @@
                 app:exitAnim="@anim/nav_default_exit_anim"
                 app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                 app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
+        <action
+                android:id="@+id/action_dealsFragment_to_gameDetailFragment"
+                app:destination="@id/gameDetailFragment"/>
     </fragment>
     <fragment
             android:id="@+id/searchFragment"
@@ -26,5 +29,27 @@
         <argument
                 android:name="search_term"
                 app:argType="string"/>
+        <action
+                android:id="@+id/action_searchFragment_to_gameDetailFragment"
+                app:destination="@id/gameDetailFragment"/>
     </fragment>
+    <fragment
+            android:id="@+id/gameDetailFragment"
+            android:name="de.r4md4c.gamedealz.detail.GameDetailFragment"
+            app:layout="@layout/fragment_game_detail"
+            android:label="GameDetailFragment">
+        <argument
+                android:name="plain_id"
+                app:argType="string"/>
+        <argument
+                android:name="title"
+                app:argType="string"/>
+    </fragment>
+    <action
+            android:id="@+id/action_global_gameDetailFragment"
+            app:destination="@id/gameDetailFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_enter_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
 </navigation>
