--- a/app/src/main/res/layout/fragment_deals.xml
+++ b/app/src/main/res/layout/fragment_deals.xml
@@ -3,10 +3,18 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+             android:orientation="vertical"
              tools:context=".deals.DealsFragment">
 
+    <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:id="@+id/toolbar"
+            android:background="?colorPrimary"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:layout_height="?actionBarSize"/>
 
     <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginTop="?actionBarSize"
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
