--- a/app/src/main/res/layout/fragment_game_detail.xml
+++ b/app/src/main/res/layout/fragment_game_detail.xml
@@ -1,33 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                      xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                     xmlns:tools="http://schemas.android.com/tools"
                                                      android:orientation="vertical"
                                                      android:layout_width="match_parent"
                                                      android:layout_height="match_parent">
 
 
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
     <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:layout_height="156dp">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapsing_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:contentScrim="?attr/colorPrimary"
-                app:expandedTitleMarginEnd="64dp"
-                app:expandedTitleMarginStart="48dp"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
+                app:expandedTitleTextAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                 app:toolbarId="@+id/toolbar"
-                app:title="@string/title_on_going_deals"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+                tools:title="@string/title_on_going_deals">
 
             <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:minHeight="?attr/actionBarSize"
-                    app:layout_scrollFlags="scroll|enterAlways"/>
+                    android:layout_height="?attr/actionBarSize"
+                    app:layout_collapseMode="pin"/>
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
@@ -35,17 +41,16 @@
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/buyFab"
             android:layout_width="wrap_content"
-            android:layout_margin="16dp"
-            app:fabSize="normal"
             app:layout_anchor="@+id/appbar"
-            app:layout_anchorGravity="right"
+            app:backgroundTint="?colorAccent"
+            style="@style/Widget.MaterialComponents.FloatingActionButton"
+            android:layout_margin="@dimen/baseline_2x"
+            app:layout_anchorGravity="end|bottom"
+            app:fabSize="normal"
+            app:tint="@android:color/white"
+            app:srcCompat="@drawable/ic_shopping_cart"
             android:layout_height="wrap_content"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
