--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="oldPriceColor">@android:color/darker_gray</color>
     <color name="newPriceColor">@color/colorAccent</color>
+
+    <color name="divider_color">#1e000000</color>
 </resources>
