--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
 
     <dimen name="baseline_1x">8dp</dimen>
     <dimen name="baseline_2x">16dp</dimen>
+    <dimen name="baseline_0_5x">4dp</dimen>
     <dimen name="grid_cell_min_height">160dp</dimen>
     <dimen name="image_height">120dp</dimen>
 </resources>
