--- a/app/src/main/res/layout/layout_screenshot_item.xml
+++ b/app/src/main/res/layout/layout_screenshot_item.xml
@@ -1,13 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:orientation="vertical"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
-
-    <ImageView
-            android:id="@+id/image"
-            android:layout_width="match_parent"
-            android:adjustViewBounds="true"
-            android:layout_height="match_parent"/>
-
-</FrameLayout>
+<ImageView
+        android:id="@+id/image"
+        android:layout_width="match_parent"
+        android:scaleType="centerCrop"
+        android:layout_height="128dp"
+        xmlns:android="http://schemas.android.com/apk/res/android"/>
