--- a/app/src/main/res/layout/layout_search_result_item.xml
+++ b/app/src/main/res/layout/layout_search_result_item.xml
@@ -4,6 +4,7 @@
                                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                                    android:layout_width="match_parent"
                                                    app:cardElevation="2dp"
+                                                   android:foreground="?selectableItemBackground"
                                                    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
