--- a/app/src/main/res/layout/layout_screenshot_item.xml
+++ b/app/src/main/res/layout/layout_screenshot_item.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
-        android:id="@+id/image"
-        android:layout_width="match_parent"
-        android:scaleType="centerCrop"
-        android:layout_height="128dp"
-        xmlns:android="http://schemas.android.com/apk/res/android"/>
+<FrameLayout android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <ImageView
+            android:id="@+id/image"
+            android:layout_width="120dp"
+            android:scaleType="centerCrop"
+            android:layout_height="120dp"
+            xmlns:android="http://schemas.android.com/apk/res/android"/>
+
+</FrameLayout>
