--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,6 @@
     <dimen name="baseline_0_5x">4dp</dimen>
     <dimen name="grid_cell_min_height">160dp</dimen>
     <dimen name="image_height">120dp</dimen>
-    <dimen name="progress_stroke_size">4dp</dimen>
+    <dimen name="progress_stroke_size">5dp</dimen>
+    <dimen name="progress_size">16dp</dimen>
 </resources>
