[WIP] Change theme and handle checking of store draft.

--- a/app/src/main/res/layout/fragment_game_detail.xml
+++ b/app/src/main/res/layout/fragment_game_detail.xml
@@ -38,12 +38,10 @@
             android:id="@+id/addToWatchList"
             android:layout_width="wrap_content"
             app:layout_anchor="@+id/appbar"
-            app:backgroundTint="?colorAccent"
-            style="@style/Widget.MaterialComponents.FloatingActionButton"
             android:layout_margin="@dimen/baseline_2x"
             app:layout_anchorGravity="end|bottom"
             app:fabSize="normal"
-            app:tint="@android:color/white"
+            app:tint="@color/primaryTextColor"
             app:srcCompat="@drawable/ic_add_to_watch_list"
             android:contentDescription="@string/add_to_watch_list"
             android:layout_height="wrap_content"/>
