--- a/app/src/main/res/layout/layout_detail_prices_item.xml
+++ b/app/src/main/res/layout/layout_detail_prices_item.xml
@@ -8,6 +8,7 @@
                                                    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
             android:minHeight="88dp"
             android:padding="@dimen/baseline_1x"
@@ -38,7 +39,6 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 tools:text="44.44"
                 android:layout_width="wrap_content"
-                android:paddingBottom="@dimen/baseline_1x"
                 android:layout_height="wrap_content"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
