--- a/app/src/main/res/layout/layout_detail_header_filter_item.xml
+++ b/app/src/main/res/layout/layout_detail_header_filter_item.xml
@@ -23,8 +23,8 @@
             android:textSize="14sp"
             android:paddingStart="@dimen/baseline_1x"
             android:drawablePadding="@dimen/baseline_1x"
-            android:drawableTint="?colorOnSurface"
-            android:drawableEnd="@drawable/ic_filter_list_black_24dp"
+            tools:drawableTint="?colorOnSurface"
+            tools:drawableEnd="@drawable/ic_filter_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:ignore="RtlSymmetry"/>
