--- a/app/src/main/res/layout/layout_add_to_watch_list.xml
+++ b/app/src/main/res/layout/layout_add_to_watch_list.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout android:layout_width="match_parent"
              android:layout_height="wrap_content"
-             xmlns:android="http://schemas.android.com/apk/res/android">
+             xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:tools="http://schemas.android.com/tools">
 
     <include layout="@layout/layout_toolbar"/>
 
@@ -20,7 +21,7 @@
 
 
             <TextView
-                    android:id="@+id/text1"
+                    android:id="@+id/notifyMeHeader"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
@@ -34,26 +35,30 @@
                     android:layout_marginTop="@dimen/baseline_1x"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                     android:text="@string/notify_when_price_reaches_subtitle"
-                    app:layout_constraintLeft_toLeftOf="@+id/text1"
-                    app:layout_constraintTop_toBottomOf="@+id/text1"
-                    app:layout_constraintRight_toRightOf="@+id/text1"
+                    app:layout_constraintLeft_toLeftOf="@+id/notifyMeHeader"
+                    app:layout_constraintTop_toBottomOf="@+id/notifyMeHeader"
+                    app:layout_constraintRight_toRightOf="@+id/notifyMeHeader"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"/>
 
-            <SeekBar
-                    android:id="@+id/seekbar"
-                    android:layout_marginTop="@dimen/baseline_1x"
-                    android:layout_width="0dp"
-                    app:layout_constraintWidth_percent="0.75"
-                    app:layout_constraintRight_toRightOf="@+id/text1"
+            <EditText
+                    android:id="@+id/priceEditText"
+                    android:inputType="numberDecimal"
+                    tools:text="45.45"
+                    android:minWidth="66dp"
+                    android:layout_marginLeft="@dimen/baseline_2x"
+                    android:layout_marginRight="@dimen/baseline_2x"
                     app:layout_constraintTop_toBottomOf="@+id/subtitle1"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
-
 
             <TextView
                     android:id="@+id/followingStoresTitle"
                     android:layout_width="0dp"
-                    android:text="On the following stores"
+                    android:text="@string/on_the_following_stores"
                     app:layout_constraintTop_toTopOf="@+id/storeAllSwitch"
                     app:layout_constraintBottom_toBottomOf="@+id/storeAllSwitch"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
@@ -64,7 +69,7 @@
                     android:layout_width="wrap_content"
                     android:checked="true"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/seekbar"
+                    app:layout_constraintTop_toBottomOf="@+id/priceEditText"
                     android:layout_height="wrap_content"/>
 
             <com.google.android.material.chip.ChipGroup
@@ -73,15 +78,8 @@
                     style="@style/Widget.MaterialComponents.ChipGroup"
                     android:layout_marginTop="@dimen/baseline_1x"
                     app:layout_constraintTop_toBottomOf="@+id/storeAllSwitch"
-                    app:layout_constraintLeft_toLeftOf="@+id/text1"
-                    app:layout_constraintRight_toRightOf="@+id/text1"
-                    android:layout_height="wrap_content"/>
-
-            <com.google.android.material.button.MaterialButton
-                    android:layout_width="wrap_content"
-                    android:text="Apply"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/storesChipGroup"
+                    app:layout_constraintLeft_toLeftOf="@+id/notifyMeHeader"
+                    app:layout_constraintRight_toRightOf="@+id/notifyMeHeader"
                     android:layout_height="wrap_content"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
