--- a/app/src/main/res/layout/layout_detail_header_filter_item.xml
+++ b/app/src/main/res/layout/layout_detail_header_filter_item.xml
@@ -24,7 +24,7 @@
             android:paddingStart="@dimen/baseline_1x"
             android:drawablePadding="@dimen/baseline_1x"
             tools:drawableTint="?colorOnSurface"
-            tools:drawableEnd="@drawable/ic_filter_list"
+            tools:drawableEnd="@drawable/ic_sort_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:ignore="RtlSymmetry"/>
