Toggling Stores action.

--- a/app/src/main/res/layout/fragment_dialog_deals_filter.xml
+++ b/app/src/main/res/layout/fragment_dialog_deals_filter.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:orientation="vertical"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:animateLayoutChanges="true"
+              android:layout_height="match_parent">
 
     <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -15,9 +16,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/content"
-            android:layout_marginTop="?actionBarSize"
             android:layout_width="match_parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:layout_height="match_parent"/>
+            android:minHeight="500dp"
+            android:layout_height="wrap_content"/>
 
-</FrameLayout>
+</LinearLayout>
