--- a/app/src/main/res/layout/dialog_region_choice.xml
+++ b/app/src/main/res/layout/dialog_region_choice.xml
@@ -12,12 +12,12 @@
                   android:paddingLeft="@dimen/baseline_2x"
                   android:paddingRight="@dimen/baseline_2x"
                   tools:context=".home.HomeActivity"
-                  android:layout_height="match_parent">
+                  android:layout_height="wrap_content">
 
         <TextView
                 android:layout_width="match_parent"
                 style="@style/TextAppearance.MaterialComponents.Body1"
-                android:text="Select Region"
+                android:text="@string/select_region"
                 android:layout_height="wrap_content"/>
 
         <Spinner
@@ -32,7 +32,7 @@
                 android:layout_width="match_parent"
                 style="@style/TextAppearance.MaterialComponents.Body1"
                 android:layout_marginTop="@dimen/baseline_2x"
-                android:text="Select Country"
+                android:text="@string/select_country"
                 android:layout_height="wrap_content"/>
 
         <Spinner
