Make screenshots section expandable.

--- a/app/src/main/res/layout/layout_screenshot_item.xml
+++ b/app/src/main/res/layout/layout_screenshot_item.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             xmlns:android="http://schemas.android.com/apk/res/android">
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
     <ImageView
+            xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/image"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             android:layout_width="120dp"
             android:scaleType="centerCrop"
-            android:layout_height="120dp"
-            xmlns:android="http://schemas.android.com/apk/res/android"/>
+            app:layout_constraintDimensionRatio="H,1:1"
+            android:foreground="?selectableItemBackground"
+            android:layout_height="@dimen/screenshot_cell_size"/>
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
