--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="grid_cell_min_height">160dp</dimen>
     <dimen name="progress_stroke_size">5dp</dimen>
     <dimen name="progress_size">16dp</dimen>
+    <dimen name="screenshot_cell_size">120dp</dimen>
 </resources>
